--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -35,6 +35,8 @@
     </head>
     <body>
         <div class="container-xl">
+            <!-- 1. Navbar -->
+            <%- include('partials/navbar.ejs') %>
             <div class="table-responsive">
                 <div class="table-wrapper">
                     <div class="table-title">
