--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -92,7 +92,9 @@
                                         Dato relacionado
                        
                                         users->users_roles->roles.name
-                                     -->
+                                    -->
+
+                                    <%= user.users_roles.roles_idrole_role.name %>
                                 </td>
                                 <td>
                                     <a href="#editEmployeeModal" class="edit"
@@ -162,7 +164,11 @@
                                 <!-- 6. Arreglo de roles -->
                                 <select name="idrole" class="form-control">
                                     <option value="null" selected disabled class="form-control">Select an item</option>
-                                
+                                    <% rolesArray.forEach( role => { %> 
+                                        <option 
+                                        value="<%=role.idrole%>"
+                                        class="form-control"><%=role.name%></option>
+                                    <% }) %>
                                 </select>
                             </div>
 
