Guía 21 STOP 2 (Middleware - Autenticación).

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,9 @@
 		<div class="navbar-nav ml-auto">
 			<!-- 1. Muestre el username  -->
 			<a href="#" class="nav-link user-action">  <%=   username   %>   </a>
-			<a href="#" class="nav-item nav-link messages"><i class="fa fa-power-off"></i> Logout</a></a>
+
+			<!-- 1. Enlace para realizar una petición GET a la ruta '/logout' -->
+			<a href="/logout" class="nav-item nav-link messages"><i class="fa fa-power-off"></i> Logout</a>
 		</div>
 	</div>
 </nav>
